database.yml: flag zstd as a user tool

--- a/database.yml
+++ b/database.yml
@@ -216,6 +216,7 @@ Sections:
       - security:
         - firmware
         - kernel
+        - user
       - plan: fix
   - Network Libraries:
     bsnmp:
