--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,ipfilter,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sqlite,tcpdump,unifdef,versions.yml,zfs,zlib,zstd
+targets=acpi,awk,bc,bsddialog,byacc,bzip2,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sqlite,tcpdump,unifdef,versions.yml,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile
@@ -48,6 +48,11 @@ sources=heimdal.c
 [ipfilter]
 type=binary
 sources=ipfilter.c
+
+[ldns]
+type=binary
+ldflags=-lprivateldns
+sources=ldns.c
 
 [less]
 type=binary
@@ -135,7 +140,7 @@ sources=unifdef.c
 
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
 depends=all
 enabled=0
 
