src/versions: report through a common helper

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,7 +1,7 @@
 targets=acpi,awk,bc,bsddialog,byacc,bzip2,dma,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sqlite,tcpdump,unifdef,versions.yml,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
-dist=Makefile
+dist=Makefile,common.c
 
 #targets
 [acpi]
@@ -161,5 +161,104 @@ type=binary
 sources=zstd.c
 
 #sources
+[acpi.c]
+depends=common.c
+
+[awk.c]
+depends=common.c
+
+[bc.c]
+
+[bsddialog.c]
+
+[byacc.c]
+
+[bzip2.c]
+depends=common.c
+
+[dma.c]
+depends=common.c
+
+[dtc.c]
+depends=common.c
+
+[file.c]
+depends=common.c
+
+[flex.c]
+depends=common.c
+
+[heimdal.c]
+depends=common.c
+
+[ipfilter.c]
+depends=common.c
+
+[ldns.c]
+depends=common.c
+
+[less.c]
+depends=common.c
+
+[libarchive.c]
+depends=common.c
+
+[libc.c]
+depends=common.c
+
+[libcbor.c]
+depends=common.c
+
+[libdialog.c]
+depends=common.c
+
+[libedit.c]
+depends=common.c
+
+[libevent.c]
+depends=common.c
+
+[liblzma.c]
+depends=common.c
+
+[libpcap.c]
+depends=common.c
+
+[libxo.c]
+depends=common.c
+
+[llvm.c]
+depends=common.c
+
 [mkuzip.c]
 depends=libc.c
+
+[ncurses.c]
+depends=common.c
+
+[openssl.c]
+depends=common.c
+
+[patch.c]
+depends=common.c
+
+[pkg.c]
+depends=common.c
+
+[sqlite.c]
+depends=common.c
+
+[tcpdump.c]
+depends=common.c
+
+[unifdef.c]
+depends=common.c
+
+[zfs.c]
+depends=common.c
+
+[zlib.c]
+depends=common.c
+
+[zstd.c]
+depends=common.c
