src/versions: add diff

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bsddialog,byacc,bzip2,dma,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sqlite,tcpdump,unifdef,versions.yml,zfs,zlib,zstd
+targets=acpi,awk,bc,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sqlite,tcpdump,unifdef,versions.yml,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -28,6 +28,10 @@ sources=byacc.c
 [bzip2]
 type=binary
 sources=bzip2.c
+
+[diff]
+type=binary
+sources=diff.c
 
 [dma]
 type=binary
@@ -144,7 +148,7 @@ sources=unifdef.c
 
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
 depends=all
 enabled=0
 
@@ -174,6 +178,9 @@ depends=common.c
 [byacc.c]
 
 [bzip2.c]
+depends=common.c
+
+[diff.c]
 depends=common.c
 
 [dma.c]
