src/versions: fix some dependencies

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -172,10 +172,13 @@ depends=common.c
 depends=common.c
 
 [bc.c]
+depends=common.c
 
 [bsddialog.c]
+depends=common.c
 
 [byacc.c]
+depends=common.c
 
 [bzip2.c]
 depends=common.c
