--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -156,7 +156,7 @@ sources=unifdef.c
 
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./tcpdump; ./unbound; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
 depends=all
 enabled=0
 
