src/versions: add sendmail

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sqlite,tcpdump,unbound,unifdef,versions.yml,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,liblzma,libpcap,libxo,llvm,mkuzip,ncurses,openssl,patch,pkg,sendmail,sqlite,tcpdump,unbound,unifdef,versions.yml,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -137,6 +137,10 @@ sources=patch.c
 type=binary
 sources=pkg.c
 
+[sendmail]
+type=binary
+sources=sendmail.c
+
 [sqlite]
 type=binary
 cflags=-isystem /usr/include/private/sqlite3
@@ -156,7 +160,7 @@ sources=unifdef.c
 
 [versions.yml]
 type=command
-command=(./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
+command=(./acpi; ./awk; ./bc; ./bmake; ./bsddialog; ./byacc; ./bzip2; ./diff; ./dma; ./dtc; ./file; ./flex; ./heimdal; ./ipfilter; ./ldns; ./less; ./libarchive; ./libc; ./libedit; ./libevent; ./liblzma; ./libpcap; ./libxo; ./mkuzip; ./ncurses; ./openssl; ./patch; ./pkg; ./sendmail; ./sqlite; ./tcpdump; ./unbound; ./unifdef; ./zfs; ./zlib; ./zstd) > versions.yml
 depends=all
 enabled=0
 
@@ -264,6 +268,9 @@ depends=common.c
 depends=common.c
 
 [pkg.c]
+depends=common.c
+
+[sendmail.c]
 depends=common.c
 
 [sqlite.c]
